fixing elongated card on mobile chrome

--- a/codingchallenge14/style.css
+++ b/codingchallenge14/style.css
@@ -28,8 +28,8 @@ body {
 }
 
 .card {
-	width: 90%;
-	height: 100%;
+	width: 100%;
+	height: 150px;
 	position: relative;
 	transition: transform 1s;
 	transform-style: preserve-3d;
